# pact

./: .gitignore  README.md  pyproject.toml  settings-connectors.md
.agents/skills/pact/: SKILL.md
.claude/: launch.json
.claude/skills/pact/: SKILL.md
.github/workflows/: pages.yml  release.yml
.hermes/skills/pact/: SKILL.md
.playwright-mcp/: page-2026-06-27T06-45-20-757Z.yml  page-2026-06-27T06-45-47-632Z.yml  page-2026-06-27T06-47-06-687Z.yml
docs/design/: pact-create.dc.html
docs/superpowers/plans/: 2026-06-24-pact-spine.md  2026-06-25-pact-day2a.md  2026-06-26-pact-day3.md  2026-06-26-pact-phase1-backend.md  2026-06-26-pact-redesign.md  2026-06-26-pact-tier1-agent-brain.md
docs/superpowers/specs/: 2026-06-24-pact-design.md  2026-06-26-pact-redesign-design.md  2026-06-27-custom-card-background-design.md  2026-06-27-pact-app-shell-design.md  2026-06-27-pact-architecture-and-flow.md
packaging/: build-sidecar.sh  pact-sidecar.spec  sidecar_entry.py
scripts/: dev.sh  package-macos-adhoc.sh
scripts/demo/: drive-phase1.sh  launch.sh  reset.sh
src/pact/: __init__.py  accounts.py  anticheat.py  api.py  broker.py  charities.py  charity_checkout.py  cli.py  clock.py  coaching.py  config.py  connectors.py  demo.py  factory.py  guardrails.py  httpworker.py  images.py  lifecycle.py  link.py  main.py  mcp.py  models.py  notify.py  packet.py  payment.py  profile.py  progress.py  reasoning.py  repository.py  scheduler.py  sidecar.py  spend_policy.py  worker.py
tests/: conftest.py  test_accounts.py  test_agent_last_mile_e2e.py  test_anticheat_days.py  test_anticheat_phash.py  test_anticheat_token.py  test_api_billing.py  test_api_broker.py  test_api_charities.py  test_api_day2.py  test_api_demo.py  test_api_donation_card.py  test_api_donation_checkout.py  test_api_flow.py  test_api_get_proofs.py  test_api_owed.py  test_api_proof_image.py  test_api_spend_policy.py  test_api_stake.py  test_app_shell_backend.py  test_broker.py  test_broker_provider.py  test_broker_provider_tier1.py  test_charities.py  test_charity_checkout.py  test_cli.py  test_clock.py  test_coaching_generate.py  test_coaching_lifecycle_messages.py  test_coaching_nudge.py  test_coaching_pace.py  test_config.py  test_config_cors.py  test_config_day2.py  test_config_tier1.py  test_connectors.py  test_consent_and_lock.py  test_cors.py  test_create_stake_approval.py  test_create_structured.py  (+49 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  RootEntry.test.tsx  RootEntry.tsx  api.ts  components.css  data.tsx  lib.test.ts  lib.ts  main.tsx  owner.ts  redesign.css  styles.css  test-node.d.ts  types.ts
web/src-tauri/: tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src/components/: AppShell.test.tsx  AppShell.tsx  ChatShell.tsx  CoachPane.test.tsx  CoachPane.tsx  CoachThread.tsx  DeclineModal.tsx  DemoControls.test.tsx  DemoControls.tsx  GoalGlyph.tsx  LandingLogoMenu.css  LandingLogoMenu.test.tsx  LandingLogoMenu.tsx  LinkConnect.tsx  LinkModal.test.tsx  LinkModal.tsx  LogoMenu.test.tsx  LogoMenu.tsx  NotificationsBell.test.tsx  NotificationsBell.tsx  PactToast.test.tsx  PactToast.tsx  PactWorld.test.tsx  PactWorld.tsx  PasteWebPact.test.tsx  PasteWebPact.tsx  ProgressRing.tsx  Reveal.tsx  StakeApprovalModal.test.tsx  StakeApprovalModal.tsx  StatsFlyout.test.tsx  StatsFlyout.tsx  SubmitSheet.tsx  Tooltip.tsx  WaxSeal.tsx  demoControls.css  paste-web-pact.css  useFocusTrap.ts
web/src/lib/: asset.ts  cardArt.test.ts  cardArt.ts  charities.ts  funding.test.ts  funding.ts  handoff.test.ts  handoff.ts  motivation.test.ts  motivation.ts  pactStatus.test.ts  pactStatus.ts  platform.test.ts  platform.ts  stats.test.ts  stats.ts
web/src/screens/: Active.tsx  Charities.tsx  (+23 more)
