[project]
name = "pact"
version = "0.1.0"
description = "Pact — a self-binding commitment engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pillow",
    "imagehash",
    "python-multipart>=0.0.32",
]

[project.scripts]
pact = "pact.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "anyio[trio]",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pact"]
