[project]
name = "pact"
version = "0.1.0"
description = "Pact — a self-binding commitment engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pillow",
    "imagehash",
    "python-multipart>=0.0.32",
    # NVIDIA NeMo Guardrails enforces the agent spend policy before any money
    # moves (see pact.guardrails). The gate runs LLM-free, so no NVIDIA key is
    # required; pact.guardrails falls back to the deterministic policy if this
    # package is absent (e.g. a slimmed packaged build).
    "nemoguardrails>=0.22",
]

[project.scripts]
pact = "pact.cli:main"
pact-sidecar = "pact.sidecar:main"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "anyio[trio]",
    "pyinstaller",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # nemoguardrails ships Pydantic-v1-style validators; silence its internal
    # deprecation noise so Pact's own test output stays readable.
    "ignore::DeprecationWarning:nemoguardrails.*",
    "ignore:.*Pydantic.*:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pact"]
