[project]
name = "pact"
version = "0.1.0"
description = "Pact — a self-binding commitment engine."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pillow",
    "imagehash",
    "python-multipart>=0.0.32",
    # Official MCP Python SDK (FastMCP) powers `pact mcp`, the agent-agnostic
    # surface over the Pact API. Lazy-imported in pact.mcp so only the `mcp`
    # subcommand pays the import cost.
    "mcp>=1.2",
]

[project.optional-dependencies]
# Tier 2 charity checkout drives the charity's real donate page with Playwright.
# Optional + lazy-imported (see pact.charity_checkout) so the core app and the
# packaged build stay lean; install with `uv pip install -e '.[checkout]'` and
# `playwright install chromium` to run real donations.
checkout = ["playwright>=1.40"]
# Tier 3 routes the backend fallback reasoning through NVIDIA Nemotron via NIM
# (OpenAI-compatible). Optional + lazy-imported (see pact.reasoning); set
# PACT_NEMOTRON_API_KEY to enable. Absent = deterministic stub fallback.
nemotron = ["openai>=1.0"]

[project.scripts]
pact = "pact.cli:main"
pact-sidecar = "pact.sidecar:main"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "anyio[trio]",
    "pyinstaller",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # nemoguardrails ships Pydantic-v1-style validators; silence its internal
    # deprecation noise so Pact's own test output stays readable.
    "ignore::DeprecationWarning:nemoguardrails.*",
    "ignore:.*Pydantic.*:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pact"]
